deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - secretName: analytics-dashboard-tls
      hosts:
        - analytics-dashboard-api.prod.plugins.vultisig.com
    - secretName: analytics-api-vultisig-tls
      hosts:
        - analytics-api.vultisig.com
  rules:
    - host: analytics-dashboard-api.prod.plugins.vultisig.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
    - host: analytics-api.vultisig.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
